--- a/PaginaWeb/PaginaContacte.html
+++ b/PaginaWeb/PaginaContacte.html
@@ -1,36 +1,50 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-<meta charset="UTF-8">
-<title>Contacto</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Contacto</title>
+    <link rel="stylesheet" href="EstilsPagina.css">
 </head>
+
 <body>
-<header><h1>Contacto</h1></header>
-<nav>...</nav>
-<main>
-<section>
-<h2>Datos de Contacto</h2>
-<table>
-<tr><th>Teléfono</th><td>123 456 789</td></tr>
-<tr><th>Email</th><td>medioambiente@villaverde.es</td></tr>
-</table>
-</section>
-<section>
-<h2>Denuncias Medioambientales</h2>
-<form>
-<label>Nombre<input type="text"></label>
-<label>Email<input type="email"></label>
-<label>Descripción<textarea></textarea></label>
-<label>Archivo<input type="file"></label>
-<button>Enviar</button>
-</form>
-</section>
-<section>
-<h2>Ubicación</h2>
-<iframe src="https://maps.google.com/maps?q=madrid&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="300"></iframe>
-</section>
-</main>
-<footer><p>Ayuntamiento de Villa Verde</p></footer>
+    <header>
+        <h1>Contacto</h1>
+    </header>
+    <nav>...</nav>
+    <main>
+        <section>
+            <h2>Datos de Contacto</h2>
+            <table>
+                <tr>
+                    <th>Teléfono</th>
+                    <td>123 456 789</td>
+                </tr>
+                <tr>
+                    <th>Email</th>
+                    <td>medioambiente@villaverde.es</td>
+                </tr>
+            </table>
+        </section>
+        <section>
+            <h2>Denuncias Medioambientales</h2>
+            <form>
+                <label>Nombre<input type="text"></label>
+                <label>Email<input type="email"></label>
+                <label>Descripción<textarea></textarea></label>
+                <label>Archivo<input type="file"></label>
+                <button>Enviar</button>
+            </form>
+        </section>
+        <section>
+            <h2>Ubicación</h2>
+            <iframe src="https://maps.google.com/maps?q=madrid&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%"
+                height="300"></iframe>
+        </section>
+    </main>
+    <footer>
+        <p>Ayuntamiento de Villa Verde</p>
+    </footer>
 </body>
+
 </html>
