--- a/PaginaWeb/PaginaPrincipal.html
+++ b/PaginaWeb/PaginaPrincipal.html
@@ -1,46 +1,49 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-<meta charset="UTF-8">
-<title>Ayuntamiento Verde</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Ayuntamiento Verde</title>
+    <link rel="stylesheet" href="EstilsPagina.css">
 </head>
+
 <body>
-<header>
-<h1>Ayuntamiento de Villa Verde</h1>
-<p>Comprometidos con el Medio Ambiente</p>
-<img src="https://via.placeholder.com/800x200" alt="Ayuntamiento">
-</header>
-<nav>
-<ul>
-<li><a href="index.html">Inicio</a></li>
-<li><a href="contacto.html">Contacto</a></li>
-<li><a href="galeria.html">Galería</a></li>
-<li><a href="medidas.html">Medidas</a></li>
-<li><a href="consejos.html">Consejos</a></li>
-<li><a href="ue.html">UE y Agenda 2030</a></li>
-</ul>
-</nav>
-<main>
-<section>
-<h2>Noticias Medioambientales</h2>
-<ul>
-<li><a href="#evento">Nueva jornada de limpieza del río</a></li>
-<li>Instalación de nuevos paneles solares municipales</li>
-</ul>
-</section>
-<section id="evento">
-<h2>Eventos Próximos</h2>
-<p>Este sábado se realizará una limpieza comunitaria del parque central.</p>
-</section>
-<section>
-<h2>Educación Ambiental</h2>
-<blockquote>"Cuidar el planeta es cuidar nuestro futuro" – Concejalía de Medio Ambiente</blockquote>
-<p>Artículos y talleres para todas las edades.</p>
-</section>
-</main>
-<footer>
-<p>&copy; 2026 Ayuntamiento de Villa Verde</p>
-</footer>
+    <header>
+        <h1>Ayuntamiento de Villa Verde</h1>
+        <p>Comprometidos con el Medio Ambiente</p>
+        <img src="https://via.placeholder.com/800x200" alt="Ayuntamiento">
+    </header>
+    <nav>
+        <ul>
+            <li><a href="PaginaPrincipal.html">Inicio</a></li>
+            <li><a href="PaginaContacte.html">Contacto</a></li>
+            <li><a href="GaleriaImatges.html">Galería</a></li>
+            <li><a href="MedidesMedioambientals.html">Medidas</a></li>
+            <li><a href="Consejos.html">Consejos</a></li>
+            <li><a href="UnioEuropea.html">UE y Agenda 2030</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section>
+            <h2>Noticias Medioambientales</h2>
+            <ul>
+                <li><a href="#evento">Nueva jornada de limpieza del río</a></li>
+                <li>Instalación de nuevos paneles solares municipales</li>
+            </ul>
+        </section>
+        <section id="evento">
+            <h2>Eventos Próximos</h2>
+            <p>Este sábado se realizará una limpieza comunitaria del parque central.</p>
+        </section>
+        <section>
+            <h2>Educación Ambiental</h2>
+            <blockquote>"Cuidar el planeta es cuidar nuestro futuro" – Concejalía de Medio Ambiente</blockquote>
+            <p>Artículos y talleres para todas las edades.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2026 Ayuntamiento de Villa Verde</p>
+    </footer>
 </body>
+
 </html>
